Removed HTML for forecast, created a JS loop for the forecast

--- a/styles/style.css
+++ b/styles/style.css
@@ -74,7 +74,7 @@ button[type="submit"] {
   margin-top: 10px;
 }
 
-.dayone {
+.weather-forecast {
   position: absolute;
   float: right;
   height: 80px;
